--- a/midulcebendicion/estilos.css
+++ b/midulcebendicion/estilos.css
@@ -1,5 +1,5 @@
 /* Fondo y estilos generales */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
 body {
   margin: 0;
   font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@ body {
   color: #333;
   margin: 0;
   letter-spacing: 2px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Rubik Glitch', sans-serif;
   text-transform: uppercase; /* Hace que el texto esté en mayúsculas */
 }
 
@@ -138,5 +138,6 @@ body {
     max-width: 100%;
   }
 }
+
 
 
